--- a/index.html
+++ b/index.html
@@ -53,19 +53,22 @@
             </nav>
         </div>
     </header>
-    <div class="background-image">
-        <div class="text-div">
-            <span>NEW PRODUCT</span>
-            <h1 class="white-56px">XX99 Mark II
-                Headphones
-            </h1>
-            <p class="white-p75">Experience natural, lifelike audio and exceptional build quality made for the
-                passionate music enthusiast.</p>
-            <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
-        </div>
-        <img src="img/background-img.png" alt="">
-    </div>
     <main>
+        <div class="background">
+            <div class="container">
+                <div class="new-product">
+                    <div class="text-div">
+                        <span>NEW PRODUCT</span>
+                        <h1 class="white-56px">XX99 Mark II
+                            Headphones
+                        </h1>
+                        <p class="white-p75">Experience natural, lifelike audio and exceptional build quality made for the
+                            passionate music enthusiast.</p>
+                        <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <section class="buy-divs">
                 <a href="#" class="buy-div">
