--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="container">
             <section class="buy-divs">
-                <a href="#" class="buy-div">
+                <a href="headphones.html" class="buy-div">
                     <div class="img">
                         <img src="img/headphones.png" alt="headphones">
                         <div class="shadow"></div>
@@ -81,7 +81,7 @@
                         <div><img src="img/shop-arrow.png" alt="arrow"></div>
                     </div>
                 </a>
-                <a href="#" class="buy-div">
+                <a href="speakers.html" class="buy-div">
                     <div class="img">
                         <img src="img/speakers.png" alt="speakers">
                         <div class="shadow"></div>
@@ -91,7 +91,7 @@
                         <div><img src="img/shop-arrow.png" alt="arrow"></div>
                     </div>
                 </a>
-                <a href="#" class="buy-div">
+                <a href="earphones.html" class="buy-div">
                     <div class="img">
                         <img src="img/earphones.png" alt="earphones">
                         <div class="shadow"></div>
