--- a/headphones.html
+++ b/headphones.html
@@ -40,20 +40,15 @@
                 <div class="basketList-div">
                     <button id="basket"><img src="img/basket.svg" alt="basket"></button>
                     <div id="list" style="display: none;">
-                        <div id="cartSumAndRemove">
-                            <h4>CART (0)</h4>
-                            <p class="black-p50">Remove All</p>
-                        </div>
+                        <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
                         <div id="items">
-
+                            
                         </div>
                         <div class="totalAndButton">
-                            <div id="total">
-                                <p class="black-p50">TOTAL</p>
-                                <h3>0$</h3>
-                            </div>
+                            <div id="total"><p class="black-p50">TOTAL</p><h3>0$</h3></div>
                             <button class="orange-button">CHECKOUT</button>
                         </div>
+                        <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
                     </div>
                 </div>
             </nav>
@@ -71,7 +66,6 @@
             <section class="product">
                 <div class="big-img">
                     <img src="img/Headphones/big-imgs/XX99-II.png" alt="headphones">
-                    <div></div>
                 </div>
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
@@ -81,7 +75,7 @@
                     <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
                         your premium headphone experience by reproducing the balanced depth and precision of
                         studio-quality sound.</p>
-                    <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    <a href="product.html"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
             </section>
             <section class="product">
@@ -95,14 +89,12 @@
                     <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
                 <div class="big-img">
-                    <img src="img/Headphones/big-imgs/XX59.png" alt="headphones">
-                    <div></div>
+                    <img src="img/Headphones/big-imgs/XX99-I.png" alt="headphones">
                 </div>
             </section>
             <section class="product">
                 <div class="big-img">
-                    <img src="img/Headphones/big-imgs/XX99-II.png" alt="headphones">
-                    <div></div>
+                    <img src="img/Headphones/big-imgs/XX59.png" alt="headphones">
                 </div>
                 <div class="text-div">
                     <h2 class="black-40px">XX59
