--- a/product.html
+++ b/product.html
@@ -55,77 +55,94 @@
         </div>
     </header>
     <main>
-        <div class="background">
-            <div class="container">
-                <div class="new-product">
-                    <div class="text-div">
-                        <span>NEW PRODUCT</span>
-                        <h1 class="white-56px">XX99 Mark II
-                            Headphones
-                        </h1>
-                        <p class="white-p75">Experience natural, lifelike audio and exceptional build quality made for the
-                            passionate music enthusiast.</p>
-                        <a href="product.html"><button class="orange-button">SEE PRODUCT</button></a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="container">
-            <section class="buy-divs">
-                <a href="headphones.html" class="buy-div">
-                    <div class="img">
-                        <img src="img/headphones.png" alt="headphones">
-                        <div class="shadow"></div>
+            <section class="product-details">
+                <a href="headphones.html"><p class="black-p50" id="goBack">GO BACK</p></a>
+                <img src="img/Headphones/big-imgs/XX99-II.png" alt="XX99">
+                <div class="text-div">
+                    <span>NEW PRODUCT</span>
+                    <h2 class="black-40px">
+                        XX99 Mark II
+                        Headphones
+                    </h2>
+                    <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
+                        your premium headphone experience by reproducing the balanced depth and precision of
+                        studio-quality sound.</p>
+                        <h4>$ 2,999</h4>
+                    <div>
+                        <div>
+                            <button id="countDown">
+                                <svg width="5" height="2" viewBox="0 0 5 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path opacity="0.25" d="M0.550508 1.516V0.2875H4.45051V1.516H0.550508Z" fill="black"/>
+                                </svg>
+                            </button>
+                             <h4>1</h4>
+                             <button id="countUp">
+                                <svg width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path opacity="0.25" d="M2.89362 6.258V3.931H0.566621V2.7025H2.89362V0.382H4.12212V2.7025H6.43612V3.931H4.12212V6.258H2.89362Z" fill="black"/>
+                                </svg> 
+                             </button>            
+                        </div>
+                        <button class="orange-button addToCart">ADD TO CART</button>
                     </div>
-                    <h4>HEADPHONES</h4>
-                    <div class="shop"><span>SHOP</span>
-                        <div><img src="img/shop-arrow.png" alt="arrow"></div>
-                    </div>
-                </a>
-                <a href="speakers.html" class="buy-div">
-                    <div class="img">
-                        <img src="img/speakers.png" alt="speakers">
-                        <div class="shadow"></div>
-                    </div>
-                    <h4>SPEAKERS</h4>
-                    <div class="shop"><span>SHOP</span>
-                        <div><img src="img/shop-arrow.png" alt="arrow"></div>
-                    </div>
-                </a>
-                <a href="earphones.html" class="buy-div">
-                    <div class="img">
-                        <img src="img/earphones.png" alt="earphones">
-                        <div class="shadow"></div>
-                    </div>
-                    <h4>EARPHONES</h4>
-                    <div class="shop"><span>SHOP</span>
-                        <div><img src="img/shop-arrow.png" alt="arrow"></div>
-                    </div>
-                </a>
+                </div>
             </section>
-            <section class="mainProducts">
-                <div class="mainProduct">
-                    <div><img src="img/ZX9-bigImg.png" alt="ZX9"></div>
-                    <div class="text-div">
-                        <h2 class="white-56px">ZX9 <br>
-                            SPEAKER</h2>
-                        <p class="white-p75">Upgrade to premium speakers that are phenomenally built to deliver truly
-                            remarkable sound.</p>
-                        <a href="#"><button class="black-button">SEE PRODUCT</button></a>
+            <section class="otherProducts">
+                <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
+                <div class="recomended-products">
+                    <div class="recomended">                    
+                        <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
+                        <div>
+                            <h5 class="black-24px">XX99 MARK I</h5>
+                            <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                        </div>
+                    </div>
+                    <div class="recomended">                    
+                        <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
+                        <div>
+                            <h5 class="black-24px">XX99 MARK I</h5>
+                            <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                        </div>
+                    </div>
+                    <div class="recomended">                    
+                        <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
+                        <div>
+                            <h5 class="black-24px">XX99 MARK I</h5>
+                            <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                        </div>
                     </div>
                 </div>
-                <div class="mainProduct2">
-                    <div class="text-div">
-                        <h3>ZX7 SPEAKER</h3>
-                        <a href="#"><button class="black-button">SEE PRODUCT</button></a>
-                    </div>
-                </div>
-                <div class="mainProduct3">
-                    <div><img src="img/YX1-earphones.png" alt="YX1"></div>
-                    <div class="text-div">
-                        <h3>YX1 EARPHONES</h3>
-                        <a href="#"><button class="black-button">SEE PRODUCT</button></a>
-                    </div>
+                <div class="buy-divs">
+                    <a href="headphones.html" class="buy-div">
+                        <div class="img">
+                            <img src="img/headphones.png" alt="headphones">
+                            <div class="shadow"></div>
+                        </div>
+                        <h4>HEADPHONES</h4>
+                        <div class="shop"><span>SHOP</span>
+                            <div><img src="img/shop-arrow.png" alt="arrow"></div>
+                        </div>
+                    </a>
+                    <a href="speakers.html" class="buy-div">
+                        <div class="img">
+                            <img src="img/speakers.png" alt="speakers">
+                            <div class="shadow"></div>
+                        </div>
+                        <h4>SPEAKERS</h4>
+                        <div class="shop"><span>SHOP</span>
+                            <div><img src="img/shop-arrow.png" alt="arrow"></div>
+                        </div>
+                    </a>
+                    <a href="earphones.html" class="buy-div">
+                        <div class="img">
+                            <img src="img/earphones.png" alt="earphones">
+                            <div class="shadow"></div>
+                        </div>
+                        <h4>EARPHONES</h4>
+                        <div class="shop"><span>SHOP</span>
+                            <div><img src="img/shop-arrow.png" alt="arrow"></div>
+                        </div>
+                    </a>
                 </div>
             </section>
             <div class="manWith-headphones">
