--- a/speakers.html
+++ b/speakers.html
@@ -40,20 +40,15 @@
                 <div class="basketList-div">
                     <button id="basket"><img src="img/basket.svg" alt="basket"></button>
                     <div id="list" style="display: none;">
-                        <div id="cartSumAndRemove">
-                            <h4>CART (0)</h4>
-                            <p class="black-p50">Remove All</p>
-                        </div>
+                        <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
                         <div id="items">
-
+                            
                         </div>
                         <div class="totalAndButton">
-                            <div id="total">
-                                <p class="black-p50">TOTAL</p>
-                                <h3>0$</h3>
-                            </div>
+                            <div id="total"><p class="black-p50">TOTAL</p><h3>0$</h3></div>
                             <button class="orange-button">CHECKOUT</button>
                         </div>
+                        <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
                     </div>
                 </div>
             </nav>
