--- a/product.html
+++ b/product.html
@@ -62,13 +62,13 @@
                 <div class="text-div">
                     <span>NEW PRODUCT</span>
                     <h2 class="black-40px">
-                        XX99 Mark II
-                        Headphones
+                        XX99 MARK II
+                        HEADPHONES
                     </h2>
                     <p class="black-p50">The new XX99 Mark II headphones is the pinnacle of pristine audio. It redefines
                         your premium headphone experience by reproducing the balanced depth and precision of
                         studio-quality sound.</p>
-                        <h4>$ 2,999</h4>
+                    <h4>$ 2,999</h4>
                     <div>
                         <div>
                             <button id="countDown">
