--- a/headphones.html
+++ b/headphones.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="basketList-div">
+                <!-- <div class="basketList-div">
                     <button id="basket"><img src="img/basket.svg" alt="basket"></button>
                     <div id="list" style="display: none;">
                         <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
@@ -50,7 +50,7 @@
                         </div>
                         <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
                     </div>
-                </div>
+                </div> -->
             </nav>
         </div>
     </header>
@@ -86,7 +86,7 @@
                     <p class="black-p50">As the gold standard for headphones, the classic XX99 Mark I offers detailed
                         and accurate audio reproduction for audiophiles, mixing engineers, and music aficionados alike
                         in studios and on the go.</p>
-                    <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                    <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
                 </div>
                 <div class="big-img">
                     <img src="img/Headphones/big-imgs/XX99-I.png" alt="headphones">
