--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="basketList-div">
+                <!-- <div class="basketList-div">
                     <button id="basket"><img src="img/basket.svg" alt="basket"></button>
                     <div id="list" style="display: none;">
                         <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
@@ -50,7 +50,7 @@
                         </div>
                         <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
                     </div>
-                </div>
+                </div> -->
             </nav>
         </div>
     </header>
