--- a/product.html
+++ b/product.html
@@ -37,12 +37,12 @@
                         </li>
                     </ul>
                 </div>
-                <div class="basketList-div">
+                <!-- <div class="basketList-div">
                     <button id="basket"><img src="img/basket.svg" alt="basket"></button>
                     <div id="list" style="display: none;">
                         <div id="cartSumAndRemove"><h4>CART (0)</h4><p class="black-p50">Remove All</p></div>
                         <div id="items">
-                            
+                            <h2 class="empty-text">CART IS EMPTY</h2>
                         </div>
                         <div class="totalAndButton">
                             <div id="total"><p class="black-p50">TOTAL</p><h3>0$</h3></div>
@@ -50,7 +50,7 @@
                         </div>
                         <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
                     </div>
-                </div>
+                </div> -->
             </nav>
         </div>
     </header>
@@ -94,20 +94,20 @@
                         <img src="img/Headphones/medium-imgs/XX99-I.png" alt="XX99-I">
                         <div>
                             <h5 class="black-24px">XX99 MARK I</h5>
-                            <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
+                            <a href="product2.html"><button class="orange-button">SEE PRODUCT</button></a>
                         </div>
                     </div>
                     <div class="recomended">                    
                         <img src="img/Headphones/medium-imgs/XX59.png" alt="XX59">
                         <div>
-                            <h5 class="black-24px">XX99 MARK I</h5>
+                            <h5 class="black-24px">XX59</h5>
                             <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
                         </div>
                     </div>
                     <div class="recomended">                    
                         <img src="img/Speakers/medium-imgs/ZX9.png" alt="ZX9">
                         <div>
-                            <h5 class="black-24px">XX99 MARK I</h5>
+                            <h5 class="black-24px">ZX9 SPEAKER</h5>
                             <a href="#"><button class="orange-button">SEE PRODUCT</button></a>
                         </div>
                     </div>
